Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-12007

matching relative paths in the Locator does not work on windows

XMLWordPrintable

    • cf6e4b8dcbc42adc3c3717728edcaf7952f1784b

      Assuming a project has multiple executables and each has a main.cpp its very hard to open the main.cpp from a particular executable in Creator on Windows even if the executables are in separate subfolders. On Linux specifying "<suffix-of-foldername>/main" in the locator allows to quickly filter the list to one or a few entries. This does not work on Windows no matter wether slash or backslash is used as separator.

        For Gerrit Dashboard: QTCREATORBUG-12007
        # Subject Branch Project Status CR V

            con Eike Ziller
            andreaspakulat Andreas Pakulat
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes